EV-11267,EV-11269, clozeImageDragdrop issue in ui alignment and full content showing fixed (#7321)

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2159,3 +2159,9 @@ iframe {
 .migrated-question img {
   max-height: unset !important;
 }
+.migrated-question #dragged-ans-choice,
+.value-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
